...
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_text_login"
        android:orderInCategory="100"
        android:title="@string/action_login"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_text_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
...
