...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVPerfil"
        app:layout_constraintVertical_bias="0.051"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bEditP"
        android:layout_width="175dp"
        android:layout_height="35dp"
        android:backgroundTint="#FF9800"
        android:text="@string/editperfil"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
...
