<resources>
    <string name="app_name">TeamMatch</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_login">Iniciar Sesión</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
...
    <string name="lugar">Lugar de celebración:</string>
    <string name="fechaevento">Fecha del evento:</string>
    <string name="categoria">Categoría:</string>
    <string name="descripcion">Descripción:</string>
    <string name="inicio">Inicio</string>
    <string name="equipos">Equipos</string>
    <string name="buscar">Buscar</string>
    <string name="perfil">Perfil</string>
    <string name="nameevent">Nombre del evento</string>
    <string name="crearevento">Crear evento</string>
    <string name="elegirfecha">ELIGE FECHA</string>
    <string name="eligehora">ELIGE HORA</string>
    <string name="deporte">Deporte</string>
...
