...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/btn_deleteEvent"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:backgroundTint="@color/colorDanger"
        android:text="@string/btn_delete"
...
